--- a/src/scss/_newPostPopup.scss
+++ b/src/scss/_newPostPopup.scss
@@ -56,7 +56,8 @@
           }
         }
 
-        input {
+        input,
+        textarea {
           padding: 0.25rem;
         }
       }
@@ -69,6 +70,9 @@
           justify-content: center;
           padding: 1rem;
 
+          .dragging {
+            border: 2px dashed $blue-font;
+          }
           button {
             @include button;
           }
