sign up, sign in, sign out, completed

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -35,7 +35,7 @@ $main-font: "IBM Plex Sans", sans-serif;
   border: gray 1px solid;
   padding: 0.5rem;
   margin: 0.5rem;
-  color: gray;
+  color: black;
   border-radius: 5px;
 }
 
