--- a/src/css/main.css
+++ b/src/css/main.css
@@ -276,7 +276,7 @@ button:hover {
   border: gray 1px solid;
   padding: 0.5rem;
   margin: 0.5rem;
-  color: gray;
+  color: black;
   border-radius: 5px;
   width: 100%;
 }
@@ -369,7 +369,7 @@ button:hover {
   border: gray 1px solid;
   padding: 0.5rem;
   margin: 0.5rem;
-  color: gray;
+  color: black;
   border-radius: 5px;
   width: 100%;
 }
