--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,10 @@
 @import "post";
 @import "newPostPopup";
 @import "fonts";
+@import "postComment";
+@import "postShare";
+@import "clonnitPremium";
+@import "accountDetails";
 
 body {
   height: 100vh;
