--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap");
 * {
   padding: 0;
@@ -334,6 +335,10 @@ button:hover {
   font-size: 1.5rem;
 }
 
+.signup-form__container strong:hover {
+  background: #6699cc;
+}
+
 .signup-form__container div {
   padding: 1rem 1rem 0.5rem 1rem;
 }
@@ -484,6 +489,11 @@ button:hover {
   padding-left: 0.25rem;
 }
 
+.post .post-text__container .post-preview-info__container .post-info .author-info span {
+  font-weight: bold;
+  color: #369;
+}
+
 .post .post-text__container .post-preview-info__container .post-info .list-buttons {
   display: flex;
   flex-direction: row;
@@ -492,6 +502,10 @@ button:hover {
 .post .post-text__container .post-preview-info__container .post-info .list-buttons li {
   padding: 0.25rem;
   font-weight: bold;
+}
+
+.post .post-text__container .post-preview-info__container .post-info .list-buttons li:hover {
+  cursor: pointer;
 }
 
 .post .post-preview {
@@ -507,6 +521,34 @@ button:hover {
   border: 1px solid #369;
   border-radius: 5px;
   padding: 1rem 2rem;
+}
+
+.post .hidden {
+  animation: fade-out-disappear 5s;
+  animation-fill-mode: forwards;
+}
+
+.post .hidden h2 {
+  color: #cbccc4;
+}
+
+.post .hidden h2 span {
+  color: #c4dbf1;
+}
+
+.post .hidden h2 span:hover {
+  cursor: pointer;
+}
+
+@keyframes fade-out-disappear {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+    height: 0;
+  }
 }
 
 .new-post__container {
@@ -541,6 +583,10 @@ button:hover {
   right: 0;
   cursor: pointer;
   font-size: 1.5rem;
+}
+
+.new-post__container strong:hover {
+  background: #6699cc;
 }
 
 .new-post__container div div {
@@ -667,6 +713,349 @@ button:hover {
 
 .new-post__container div form .submit__container button:hover {
   background-color: #8cb3d9;
+}
+
+.post-comment {
+  border: #cbccc4 1px solid;
+  background: #f0f0f0;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 0.5rem;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+}
+
+.post-comment h4 {
+  padding: 0.5rem;
+  padding-left: 2rem;
+  align-self: flex-start;
+}
+
+.post-comment h4 span {
+  color: #369;
+  font-weight: bold;
+}
+
+.post-comment form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+}
+
+.post-comment form textarea {
+  width: 100%;
+  resize: vertical;
+  min-height: 3rem;
+  height: 6rem;
+  max-height: 20rem;
+  padding: 0.5rem;
+}
+
+.post-comment form button {
+  padding: 0.5rem;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bolder;
+  background-color: #369;
+  border: none;
+  border-bottom: 5px;
+  margin: 0.5rem;
+}
+
+.post-comment form button:hover {
+  background-color: #8cb3d9;
+}
+
+.post-comment .comment {
+  border: #cbccc4 1px solid;
+  align-self: flex-start;
+  padding: 1rem 0.5rem;
+  margin: 0.5rem 2rem;
+  border-radius: 5px;
+  background: white;
+  width: 90%;
+}
+
+.post-comment .comment .comment-author {
+  font-size: 0.75rem;
+}
+
+.post-comment .comment .comment-author span {
+  font-weight: bold;
+  color: #369;
+}
+
+.post-comment .comment .comment-value {
+  padding-top: 0.5rem;
+}
+
+.post-share {
+  border: #cbccc4 1px solid;
+  background: #f0f0f0;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 0.5rem;
+  width: 60%;
+}
+
+.post-share h4 {
+  padding: 0.5rem;
+}
+
+.post-share span {
+  animation: fade-out 2s;
+}
+
+.post-share input {
+  border: gray 1px solid;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  color: black;
+  border-radius: 5px;
+  width: 60%;
+}
+
+.post-share button {
+  padding: 0.5rem;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bolder;
+  background-color: #369;
+  border: none;
+  border-bottom: 5px;
+}
+
+.post-share button:hover {
+  background-color: #8cb3d9;
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.clonnit-premium {
+  width: 40vw;
+  height: fit-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 2rem;
+  box-shadow: 0px 0px 15px 5px black;
+  background-color: #f8fbfd;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  z-index: 100;
+  background-color: #1c2a37;
+  margin: 2px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+
+.clonnit-premium .premium-heading {
+  border: 1px solid white;
+  background-color: #1c2a37;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.clonnit-premium .premium-heading h3 {
+  font-weight: bolder;
+  margin: 1rem 0;
+  font-size: 3rem;
+}
+
+.clonnit-premium .premium-heading h3 span {
+  color: #ff4500;
+}
+
+.clonnit-premium .premium-heading p {
+  color: white;
+  margin: 0.5rem 0;
+  font-size: 0.75rem;
+  padding: 0 2rem;
+}
+
+.clonnit-premium .premium-body {
+  color: white;
+  margin: 0.5rem 1rem;
+}
+
+.clonnit-premium .premium-body h4 {
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.clonnit-premium .premium-body h4 span {
+  text-decoration: line-through;
+}
+
+.clonnit-premium .premium-body ul li {
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+}
+
+.clonnit-premium .premium-body ul li span {
+  font-size: 0.75rem;
+  font-weight: normal;
+}
+
+.clonnit-premium .premium-body ul li::before {
+  content: "• ";
+}
+
+.clonnit-premium .premium-payment {
+  color: white;
+  display: flex;
+  border: 2px solid white;
+  flex-direction: column;
+  padding: 1rem;
+  margin: 2rem;
+}
+
+.clonnit-premium .premium-payment h4 {
+  padding: 0.5rem;
+}
+
+.clonnit-premium .premium-payment .payment-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.clonnit-premium .premium-payment .payment-container label {
+  padding-left: 0.5rem;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item-hz {
+  display: flex;
+  flex-direction: row;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item-hz div {
+  width: 100%;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item-hz div [for="ex"] {
+  flex-grow: 20;
+  width: 100%;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item-hz div #ex {
+  width: 40%;
+}
+
+.clonnit-premium .premium-payment .payment-container .payment-item-hz div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+}
+
+.clonnit-premium .premium-payment .payment-container input {
+  border: gray 1px solid;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  color: black;
+  border-radius: 5px;
+}
+
+.clonnit-premium .premium-payment .payment-container button {
+  padding: 0.5rem;
+  text-transform: uppercase;
+  color: white;
+  font-weight: bolder;
+  background-color: #369;
+  border: none;
+  border-bottom: 5px;
+  background-color: #ff4500;
+  width: 50%;
+  align-self: center;
+  margin: 1rem;
+}
+
+.clonnit-premium .premium-payment .payment-container button:hover {
+  background-color: #8cb3d9;
+}
+
+.clonnit-premium .premium-payment .third {
+  width: 30%;
+}
+
+.clonnit-premium .billing-unavailable {
+  border: red 2px solid;
+  background-color: #ff9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+  padding: 4rem;
+  text-align: center;
+}
+
+.clonnit-premium .billing-unavailable h4 {
+  color: #660000;
+}
+
+.account-details {
+  width: 40vw;
+  height: fit-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 2rem;
+  box-shadow: 0px 0px 15px 5px black;
+  background-color: #f8fbfd;
+  transform: translate(-50%, -50%);
+  border-radius: 5px;
+  z-index: 100;
+}
+
+.account-details strong {
+  color: #f0f0f0;
+  background: #369;
+  position: absolute;
+  padding: 0.25rem;
+  border-radius: 0 5px 0 5px;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.account-details strong:hover {
+  background: #6699cc;
+}
+
+.account-details h4 {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.account-details p {
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+
+.account-details p span {
+  font-weight: bold;
 }
 
 body {
