--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -63,6 +63,10 @@ $main-font: "IBM Plex Sans", sans-serif;
   right: 0;
   cursor: pointer;
   font-size: 1.5rem;
+
+  &:hover {
+    background: lighten($blue-font, 20%);
+  }
 }
 
 button:hover {
